--- a/src/main/resources/templates/users/edit.html
+++ b/src/main/resources/templates/users/edit.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<form th:method="PATCH" th:action="@{/user/{id}(id=${user.getId()})}" th:object="${user}">
+<form th:method="PATCH" th:action="@{/admin/{id}(id=${user.getId()})}" th:object="${user}">
   <label for="username">Name</label>
   <input type="text" th:field="*{username}" id="username"/>
 
@@ -34,6 +34,14 @@
 
   <label for="password">password</label>
   <input type="text" th:field="*{password}" id="password">
+
+
+  <br>
+
+
+  <select th:field="*{role}" multiple>
+    <option th:each="role : ${role}" th:value="${role.getId()}" th:text="${role.getName()}"></option>
+  </select>
 
 
   <br>
