--- a/src/main/resources/templates/users/user.html
+++ b/src/main/resources/templates/users/user.html
@@ -7,19 +7,19 @@
 <body>
 
 <div th:each="user : ${user}">
-    <a th:href="@{/user/{id} (id=${user.getId()})}" th:text="${user.getUsername()}">user</a>
+    <a th:href="@{/admin/{id} (id=${user.getId()})}" th:text="${user.getUsername()}">user</a>
 </div>
 
 <br>
 <hr/>
 
-<a th:href="@{/user/new}">Create User</a>
-
+<a th:href="@{/admin/new}">Create User</a>
 
 <form th:action="@{/logout}" method="post">
     <input type="submit" value="logout">
 </form>
 
+<a th:href="@{/admin/test}">Test bleeeeeeet</a>
 
 </body>
 </html>
