--- a/src/main/resources/templates/users/userID.html
+++ b/src/main/resources/templates/users/userID.html
@@ -11,19 +11,20 @@
 <p th:text="${user.getAge()}">VALUE</p>
 <p th:text="${user.getId()}">VALUE</p>
 <p th:text="${user.getEmail()}">VALUE</p>
+<p th:text="${user.toString()}">VALUE</p>
 
 <br>
 
-<a th:href="@{/user}">return</a>
+<a th:href="@{/admin}">return</a>
 
 <br>
 
-<a th:href="@{/user/{id}/edit(id=${user.getId()})}">Update user</a>
+<a th:href="@{/admin/{id}/edit(id=${user.getId()})}">Update user</a>
 
 <br>
 <hr/>
 
-<form th:method="DELETE" th:action="@{/user/{id}(id=${user.getId()})}">
+<form th:method="DELETE" th:action="@{/admin/{id}(id=${user.getId()})}">
     <input type="submit" value="Delete user"/>
 </form>
 
