--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -28,8 +28,6 @@
         <div class="col-sm-2" style="background-color: rgb(40,40,40)">
             <div class="d-grid gap-2">
                 <button class="btn btn-primary" type="button">Admin</button>
-                <br>
-                <br>
                 <button class="btn btn-primary" type="button">User</button>
             </div>
         </div>
@@ -41,13 +39,13 @@
             <div class="container-fluid">
                 <ul class="nav nav-tabs">
                     <li class="nav-item">
-                        <button class="nav-link active" type="button" role="tab" data-bs-toggle="tab"
+                        <button class="nav-link active btn-primary" type="button" role="tab" data-bs-toggle="tab"
                                 data-bs-target="#allUsersTab"
                         >All users
                         </button>
                     </li>
                     <li class="nav-item">
-                        <button class="nav-link" type="button" role="tab" data-bs-target="#newUserTab"
+                        <button class="nav-link btn-primary" type="button" role="tab" data-bs-target="#newUserTab"
                                 data-bs-toggle="tab">New user
                         </button>
                     </li>
@@ -56,7 +54,7 @@
 
             <div class="tab-content">
                 <div class="tab-pane active" id="allUsersTab">
-                    <table class="table table-striped text-white">
+                    <table class="table text-white">
                         <h3>All users</h3>
                         <thead>
                         <tr>
@@ -73,7 +71,7 @@
                         <tbody>
                         <div th:each="user : ${user}">
                             <tr>
-                                <th scope="row"><a th:text="${user.getId()}">user</a</th>
+                                <th scope="row"><a th:text="${user.getId()}">user</a></th>
                                 <td><a th:text="${user.getUsername()}">user</a></td>
                                 <td><a th:text="${user.getLastName()}">user</a></td>
                                 <td><a th:text="${user.getAge()}">user</a></td>
@@ -132,25 +130,27 @@
                                                         <input type="text" th:name="password"
                                                                th:value="*{user.getPassword}" id="password">
 
-
                                                         <br>
 
 
-                                                        <!--                                                <select th:field="*{role}" multiple>-->
-                                                        <!--                                                    <option th:each="role : ${role}" th:value="${role.getId()}" th:text="${role.getName()}"></option>-->
-                                                        <!--                                                </select>-->
-                                                </div>
-                                                <div class="modal-footer">
-                                                    <button type="button" class="btn btn-secondary"
-                                                            data-bs-dismiss="modal">Закрыть
-                                                    </button>
-                                                    <button type="button" class="btn btn-primary">Сохранить изменения
-                                                    </button>
+                                                        <select class="form-select" aria-label="Default select"
+                                                                th:name="role" multiple>
+                                                            <option th:each="role : ${role}" th:value="${role.getId()}"
+                                                                    th:text="${role.getName()}"></option>
+                                                        </select>
+
+                                                        <div class="modal-footer">
+                                                            <button type="button" class="btn btn-secondary"
+                                                                    data-bs-dismiss="modal">Close
+                                                            </button>
+                                                            <button type="submit" class="btn btn-primary">Save edits
+                                                            </button>
+                                                        </div>
+                                                    </form>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
-
                                 </td>
                                 <td>
                                     <form th:method="DELETE" th:action="@{/admin/{id}(id=${user.getId()})}">
@@ -170,21 +170,21 @@
                             <div class="position-relative text-center">
                                 <label for="username">Name</label>
                                 <br>
-                                <input type="text" th:field="*{username}" class="form-control" id="username"/>
+                                <input type="text" th:field="*{username}" class="form-control">
                                 <div class="valid-tooltip">
                                     Looks good!
                                 </div>
                             </div>
                             <div class="position-relative text-center">
                                 <label for="lastName">Surname</label>
-                                <input type="text" th:field="*{lastName}" class="form-control" id="lastName">
+                                <input type="text" th:field="*{lastName}" class="form-control">
                                 <div class="valid-tooltip">
                                     Looks good!
                                 </div>
                             </div>
                             <div class="position-relative text-center">
                                 <label for="age">age</label>
-                                <input type="text" th:field="*{age}" class="form-control" id="age">
+                                <input type="text" th:field="*{age}" class="form-control">
                                 <div class="valid-tooltip">
                                     Looks good!
                                 </div>
@@ -193,7 +193,7 @@
                                 <label for="email" class="form-label">email</label>
                                 <div class="input-group has-validation">
                                     <span class="input-group-text" id="validationTooltipUsernamePrepend">@</span>
-                                    <input type="text" class="form-control" th:field="*{email}" id="email"
+                                    <input type="text" class="form-control" th:field="*{email}"
                                            aria-describedby="validationTooltipUsernamePrepend" required="">
                                     <div class="invalid-tooltip">
                                         Please choose a unique and valid username.
@@ -203,14 +203,13 @@
 
                             <div class="position-relative text-center">
                                 <label for="password">password</label>
-                                <input type="text" th:field="*{password}" class="form-control" id="password">
+                                <input type="text" th:field="*{password}" class="form-control">
                                 <div class="invalid-tooltip">
                                     Looks good!
                                 </div>
                             </div>
                             <div class="position-relative text-center">
-                                <label for="validationTooltip04" class="form-label">State</label>
-                                <select class="form-select" id="validationTooltip04" required="">
+                                <select class="form-select" aria-label="Default select" th:name="role" multiple>
                                     <option th:each="role : ${role}" th:value="${role.getId()}"
                                             th:text="${role.getName()}"></option>
                                 </select>
@@ -221,20 +220,12 @@
                             <div class="col-12">
                                 <button class="btn btn-primary" type="submit">Submit form</button>
                             </div>
-
                         </form>
                     </div>
                 </div>
-
             </div>
-
-
         </div>
     </div>
-
-    <br>
-
-
 </div>
 
 
