--- a/src/main/resources/templates/users/createUser.html
+++ b/src/main/resources/templates/users/createUser.html
@@ -2,54 +2,133 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>New user</title>
+    <title>All_human</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
 </head>
-<body>
-
-<form th:method="POST" th:action="@{/admin}" th:object="${user}">
-  <label for="username">Name</label>
-  <input type="text" th:field="*{username}" id="username"/>
-
-
-  <br>
-
-  <label for="lastName">Surname</label>
-  <input type="text" th:field="*{lastName}" id="lastName">
+<body style="background-color: rgb(30,30,30)">
+<nav class="navbar navbar-dark bg-dark text-white">
+    <div class="container-fluid">
+        <a th:text="${userCurrent.getEmail()} + ${userCurrent.getRole()}">Admin panel</a>
+        <a th:href="@{/logout}" method="post">logout</a>
+    </div>
+</nav>
 
 
-  <br>
+<div class="p-3 mb-2 dark  text-white">
 
-  <label for="age">age</label>
-  <input type="text" th:field="*{age}" id="age">
+    <div class="row">
+
+        <div class="col-sm-2" style="background-color: rgb(40,40,40)">
+            <div class="d-grid gap-2">
+                <button class="btn btn-primary" type="button">Admin</button>
+                <br>
+                <br>
+                <button class="btn btn-primary" type="button">User</button>
+            </div>
+        </div>
+        <div class="col-sm-10">
+            <H1>Admin panel</H1>
+
+            <br>
+            <div class="container-fluid">
+                <a th:href="@{/admin}">
+                    <button type="button" class="btn btn-outline-primary" data-bs-toggle="button" autocomplete="off">All
+                        user
+                    </button>
+                </a>
+                <a th:href="@{/admin/new}">
+                    <button type="button" class="btn btn-primary" data-bs-toggle="button" autocomplete="off">New
+                        user
+                    </button>
+                </a>
+            </div>
+
+            <div class="container-fluid col-12 d-flex justify-content-center">
+                <form th:method="POST" th:action="@{/admin}" th:object="${user}" class="text-center col-3">
+
+                    <div class="position-relative text-center">
+                        <label for="username">Name</label>
+                        <br>
+                        <input type="text" th:field="*{username}" class="form-control" id="username"/>
+                        <div class="valid-tooltip">
+                            Looks good!
+                        </div>
+                    </div>
+                    <div class="position-relative text-center">
+                        <label for="lastName">Surname</label>
+                        <input type="text" th:field="*{lastName}" class="form-control" id="lastName">
+                        <div class="valid-tooltip">
+                            Looks good!
+                        </div>
+                    </div>
+                    <div class="position-relative text-center">
+                        <label for="age">age</label>
+                        <input type="text" th:field="*{age}" class="form-control" id="age">
+                        <div class="valid-tooltip">
+                            Looks good!
+                        </div>
+                    </div>
+                    <div class="position-relative text-center">
+                        <label for="email" class="form-label">email</label>
+                        <div class="input-group has-validation">
+                            <span class="input-group-text" id="validationTooltipUsernamePrepend">@</span>
+                            <input type="text" class="form-control" th:field="*{email}" id="email"
+                                   aria-describedby="validationTooltipUsernamePrepend" required="">
+                            <div class="invalid-tooltip">
+                                Please choose a unique and valid username.
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="position-relative text-center">
+                        <label for="password">password</label>
+                        <input type="text" th:field="*{password}" class="form-control" id="password">
+                        <div class="invalid-tooltip">
+                            Looks good!
+                        </div>
+                    </div>
+                    <div class="position-relative text-center">
+                        <label for="validationTooltip04" class="form-label">State</label>
+                        <select class="form-select" id="validationTooltip04" required="">
+                            <option th:each="role : ${role}" th:value="${role.getId()}"
+                                    th:text="${role.getName()}"></option>
+                        </select>
+                        <div class="invalid-tooltip">
+                            Please select a valid state.
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <button class="btn btn-primary" type="submit">Submit form</button>
+                    </div>
+
+                </form>
+            </div>
 
 
-  <br>
+        </div>
+    </div>
 
-  <label for="email">email</label>
-  <input type="text" th:field="*{email}" id="email">
+    <br>
 
-
-  <br>
-
-
-  <label for="password">password</label>
-  <input type="text" th:field="*{password}" id="password">
+</div>
 
 
-  <br>
-
-
-  <select th:field="*{role}" multiple>
-    <option th:each="role : ${role}" th:value="${role.getId()}" th:text="${role.getName()}"></option>
-  </select>
-
-
-  <br>
-
-
-  <input type="submit" value="Add user"/>
-
-</form>
-
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
 </html>
