--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -28,7 +28,7 @@
         <div class="col-sm-2" style="background-color: rgb(40,40,40)">
             <div class="d-grid gap-2">
                 <button class="btn btn-primary" type="button">Admin</button>
-                <button class="btn btn-primary" type="button">User</button>
+                <button class="btn btn-primary" th:href="@{/user}">User</button>
             </div>
         </div>
         <div class="col-sm-10">
@@ -86,7 +86,7 @@
                                     <div class="modal fade" th:id="'exampleModal' + ${user.getId()}" tabindex="-1"
                                          aria-labelledby="exampleModalLabel" aria-hidden="true">
                                         <div class="modal-dialog">
-                                            <div class="modal-content">
+                                            <div class="modal-content bg-dark">
                                                 <div class="modal-header">
                                                     <h5 class="modal-title" id="exampleModalLabel">Заголовок модального
                                                         окна</h5>
@@ -98,37 +98,45 @@
                                                           th:action="@{/admin/{id}(id=${user.getId()})}">
 
                                                         <label for="username">Name</label>
-                                                        <input type="text" th:name="username"
-                                                               th:value="*{user.getUsername}" id="username"/>
+                                                        <input type="text" class="form-control" th:name="username"
+                                                               th:value="*{user.getUsername}" id="username"
+                                                               aria-label="Username"
+                                                               aria-describedby="input-group-right">
 
 
                                                         <br>
 
                                                         <label for="lastName">Surname</label>
-                                                        <input type="text" th:name="lastName"
-                                                               th:value="*{user.getLastName}" id="lastName">
+                                                        <input type="text" class="form-control" th:name="lastName"
+                                                               th:value="*{user.getLastName}" id="lastName"
+                                                               aria-label="Username"
+                                                               aria-describedby="input-group-right">
 
 
                                                         <br>
 
                                                         <label for="age">age</label>
-                                                        <input type="text" th:name="age" th:value="*{user.getAge}"
-                                                               id="age">
-
+                                                        <input type="text" class="form-control" th:name="age"
+                                                               th:value="*{user.getAge}" id="age" aria-label="Username"
+                                                               aria-describedby="input-group-right">
 
                                                         <br>
 
                                                         <label for="email">email</label>
-                                                        <input type="text" th:name="email" th:value="*{user.getEmail}"
-                                                               id="email">
+                                                        <input type="text" class="form-control" th:name="email"
+                                                               th:value="*{user.getEmail}" id="email"
+                                                               aria-label="Username"
+                                                               aria-describedby="input-group-right">
 
 
                                                         <br>
 
 
                                                         <label for="password">password</label>
-                                                        <input type="text" th:name="password"
-                                                               th:value="*{user.getPassword}" id="password">
+                                                        <input type="text" class="form-control" th:name="password"
+                                                               th:value="*{user.getPassword}" id="password"
+                                                               aria-label="Username"
+                                                               aria-describedby="input-group-right">
 
                                                         <br>
 
