--- a/src/main/resources/templates/users/user.html
+++ b/src/main/resources/templates/users/user.html
@@ -15,7 +15,7 @@
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
 </head>
-<body>
+<body style="background-color: rgb(30,30,30)">
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="info">
 </nav>
